--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-763.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇬🇧 英国-1.71MB/s(Youtube:不良林), server: 51.89.18.25, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/350432191028, ws-headers: {Host: 51.89.18.25}}
-  - {name: 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.30MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-174.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.03MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-190.1KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.08MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇬🇧 英国-3.09MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-8.22MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-763.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.71MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
