--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-174.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.03MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.18MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-190.1KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.08MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-3.45MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇨🇳 中国-1.15MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇬🇧 英国-3.09MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-8.22MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-11.91MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.34MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.22MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-174.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.18MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-190.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.09MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
