--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,12 +6,12 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-856.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.03MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-245.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.08MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-4.22MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 捷克-183.5KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇺🇸 美国-4.80MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.61MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.77MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.53MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.76MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.29MB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
@@ -22,12 +22,12 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 捷克-183.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
@@ -37,12 +37,12 @@ proxy-groups:
     interval: 300
     proxies:
       - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 捷克-183.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
@@ -53,12 +53,12 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 捷克-183.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
@@ -73,12 +73,12 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 捷克-183.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
@@ -88,12 +88,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 捷克-183.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
@@ -104,12 +104,12 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 捷克-183.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
@@ -129,12 +129,12 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
+      - 捷克-183.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
