--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-856.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 捷克-183.5KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇺🇸 美国-4.80MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.61MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.92MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.77MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.53MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇨🇳 中国-3.75MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.76MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.29MB/s(Youtube:不良林), server: j1.v2.gay, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: j1.v2.gay}}
+  - {name: 🇺🇸 美国-4.41MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-10.46MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.84MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.36MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.20MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.34MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-19.03MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 捷克-183.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 捷克-183.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 捷克-183.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 捷克-183.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 捷克-183.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 捷克-183.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-856.1KB/s(Youtube:不良林)
-      - 捷克-183.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
