--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇳 中国-3.75MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.76MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.41MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-10.46MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.53MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-9.86MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.61MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇯🇵 日本-20.94MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.84MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-4.36MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇮🇳 印度-2.20MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
-      - 🇬🇧 英国-10.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.53MB/s(Youtube:不良林)
+      - 🇬🇧 英国-9.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇯🇵 日本-4.36MB/s(Youtube:不良林)
       - 🇮🇳 印度-2.20MB/s(Youtube:不良林)
